--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     console.log("Hello World!")
   </script> -->
 
-    <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script>
         function createUniversalLink() {
         }
@@ -81,8 +81,8 @@
         }
 
         async function main() {
-            alert("LINE Developers x Skooldio");
-            await liff.init({ liffId: "YOUR-LIFF-ID" });
+            // alert("LINE Developers x Skooldio");
+            await liff.init({ liffId: "U78942b8e7e7305b405222c24524d764a" });
             // getEnvironment()
             // getUserProfile()
             // getContext()
