recorrect liff id

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         async function main() {
             // alert("LINE Developers x Skooldio");
-            await liff.init({ liffId: "U78942b8e7e7305b405222c24524d764a" });
+            await liff.init({ liffId: "2004273909-l3dZk393" });
             // getEnvironment()
             // getUserProfile()
             // getContext()
