--- a/index.html
+++ b/index.html
@@ -78,12 +78,17 @@
         }
 
         function getEnvironment() {
+            document.getElementById("os").append(liff.getOS());
+            document.getElementById("language").append(liff.getLanguage());
+            document.getElementById("version").append(liff.getVersion());
+            document.getElementById("accessToken").append(liff.getAccessToken());
+            document.getElementById("isInClient").append(liff.isInClient());
         }
 
         async function main() {
             // alert("LINE Developers x Skooldio");
             await liff.init({ liffId: "2004273909-l3dZk393" });
-            // getEnvironment()
+            getEnvironment()
             // getUserProfile()
             // getContext()
             // getFriendship()
