--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
             document.getElementById("version").append(liff.getVersion());
             document.getElementById("accessToken").append(liff.getAccessToken());
             document.getElementById("isInClient").append(liff.isInClient());
+
+            if (liff.isInClient()) {
+                document.getElementById("btnLogOut").style.dispaly = "None";
+            } else 
+            {
+                document.getElementById("btnMsg").style.dispaly = "None";
+                document.getElementById("btnScanCode").style.dispaly = "None";
+                document.getElementById("btnClose").style.dispaly = "None";
+            }
         }
 
         async function main() {
