--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         }
 
         async function getUserProfile() {
+            const profile = await liff.getProfile();
+            document.getElementById("pictureUrl").append(profile.pictureUrl);
+            document.getElementById("userId").append(profile.userId);
+            document.getElementById("statusMessage").append(profile.statusMessage);
+            document.getElementById("displayname").append(profile.displayname);
         }
 
         function getEnvironment() {
@@ -98,7 +103,7 @@
             // alert("LINE Developers x Skooldio");
             await liff.init({ liffId: "2004273909-l3dZk393" });
             getEnvironment()
-            // getUserProfile()
+            getUserProfile()
             // getContext()
             // getFriendship()
             // createUniversalLink()
