modify senMsg func

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                         "type": "sticker",
                         "stickerId": 1,
                         "packageId": 1,
-                    }
+                    },
                 ])
-                alert("Message Sent")
+                alert("Message Sent");
             }
         }
 
