add dummy friend add

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             document.getElementById("friendship").append(friend.fiendFlag);
             if (!friend.fiendFlag) {
                 if (confirm("คุณยังไม่ได้เป็นเพื่อน จะเพิ่มเพื่อนเลยไหม ??")) {
-                    window.location = ""
+                    window.location = "https://www.google.com/"
                 }
             }
         }
