add openWindow func

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         }
 
         function openWindow() {
+            liff.openWindow({
+                url: "https://line.me",
+                eternal: true
+            })
         }
 
         async function getFriendship() {
