--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         }
 
         function closed() {
+            liff.closeWindow();
         }
 
         async function scanCode() {
@@ -136,7 +137,7 @@
             getUserProfile()
             getContext()
             getFriendship()
-            // createUniversalLink()
+            createUniversalLink()
         }
         main()
     </script>
