--- a/index.html
+++ b/index.html
@@ -133,11 +133,14 @@
         async function main() {
             // alert("LINE Developers x Skooldio");
             await liff.init({ liffId: "2004273909-l3dZk393" });
-            getEnvironment()
-            getUserProfile()
-            getContext()
-            getFriendship()
-            createUniversalLink()
+            document.getElementById("isLoggedIn").append(liff.isLoggedIn());
+            if (liff.isLoggedIn()) {
+                getEnvironment();
+                getUserProfile();
+                getContext();
+                getFriendship()
+            }
+            // createUniversalLink()
         }
         main()
     </script>
