add login incase dont login

--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
                 getEnvironment();
                 getUserProfile();
                 getContext();
-                getFriendship()
+                getFriendship();
+            } else {
+                liff.login();
             }
             // createUniversalLink()
         }
