--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     console.log("Hello World!")
   </script> -->
 
-    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <!-- <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
+    <script src="https://static.line-scdn.net/liff/edge/versions/2.23.1/sdk.js"></script>
     <script>
         function createUniversalLink() {
         }
