--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <button id="btnMsg" onclick="sendMsg()">Send Message</button>
     <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
     <button onclick="openWindow()">Open Window</button>
-    <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
+    <button id="btnScanCode" onclick="scanCodeV2()">Scan Code</button>
     <button id="btnLogOut" onclick="logOut()">Log Out</button>
     <button id="btnClose" onclick="closed()">Close</button>
 
@@ -61,9 +61,14 @@
             liff.closeWindow();
         }
 
-        async function scanCode() {
-            const result = await liff.scanCodeV2();
-            document.getElementById("scanCode").append(result.value);
+        async function scanCodeV2() {
+            try {
+                const result = await liff.scanCodeV2();
+                // document.querySelector('#result').innerHTML = result.value;
+                document.getElementById("scanCode").append(result.value);
+            } catch (error) {
+                alert('scanCodeV2', error);
+            }
         }
 
         function openWindow() {
