add logout func

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         }
 
         function logOut() {
+            liff.lgout();
+            window.locaion.reload();
         }
 
         function closed() {
