--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
 
         function logOut() {
-            liff.lgout();
+            liff.logout();
             window.locaion.reload();
         }
 
