--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         function logOut() {
             liff.logout();
-            window.locaion.reload();
+            window.location.reload();
         }
 
         function closed() {
