--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         }
 
         async function shareMsg() {
+            await liff.shareTargetPicker([
+                {
+                    "type": "text",
+                    "text": "This message was sent by ShareTargetPicker"
+                }
+            ]);
         }
 
         function logOut() {
@@ -96,8 +102,8 @@
                 await liff.sendMessages([
                     {
                         "type": "sticker",
-                        "stickerId": 1,
-                        "packageId": 1,
+                        "stickerId": 2,
+                        "packageId": 2,
                     },
                 ])
                 alert("Message Sent");
