--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         const params = new URLSearchParams(queryString);
         document.getElementById("param").append(params.get("param"));
     </script>
-    
+
     <script src="https://static.line-scdn.net/liff/edge/versions/2.23.1/sdk.js"></script>
     <script>
         function createUniversalLink() {
@@ -165,17 +165,17 @@
 
         async function main() {
             // alert("LINE Developers x Skooldio");
-            await liff.init({ liffId: "2004273909-l3dZk393" });
-            document.getElementById("isLoggedIn").append(liff.isLoggedIn());
-            if (liff.isLoggedIn()) {
-                getEnvironment();
-                getUserProfile();
-                getContext();
-                getFriendship();
-                createUniversalLink()
-            } else {
-                liff.login();
-            }
+            // await liff.init({ liffId: "2004273909-l3dZk393" });
+            // document.getElementById("isLoggedIn").append(liff.isLoggedIn());
+            // if (liff.isLoggedIn()) {
+            //     getEnvironment();
+            //     getUserProfile();
+            //     getContext();
+            //     getFriendship();
+            //     createUniversalLink()
+            // } else {
+            //     liff.login();
+            // }
         }
         main()
     </script>
