--- a/index.html
+++ b/index.html
@@ -180,18 +180,18 @@
         }
 
         async function main() {
-            alert("LINE Developers x Skooldio");
-            await liff.init({ liffId: "2004273909-l3dZk393" });
-            document.getElementById("isLoggedIn").append(liff.isLoggedIn());
-            if (liff.isLoggedIn()) {
-                getEnvironment();
-                getUserProfile();
-                getContext();
-                getFriendship();
-                createUniversalLink()
-            } else {
-                liff.login();
-            }
+            // alert("LINE Developers x Skooldio");
+            // await liff.init({ liffId: "2004273909-l3dZk393" });
+            // document.getElementById("isLoggedIn").append(liff.isLoggedIn());
+            // if (liff.isLoggedIn()) {
+            //     getEnvironment();
+            //     getUserProfile();
+            //     getContext();
+            //     getFriendship();
+            //     createUniversalLink()
+            // } else {
+            //     liff.login();
+            // }
         }
         main()
     </script>
