--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <script src="https://static.line-scdn.net/liff/edge/versions/2.23.1/sdk.js"></script>
     <script>
         function createUniversalLink() {
-            const link1 = liff.parmanentLink.createUrl();
+            const link1 = liff.permanentLink.createUrl();
             document.getElementById("universalLink1").append(link1);
 
-            liff.parmanentLink.setExtraQueryParam('param=9');
-            const link2 = liff.parmanentLink.createUrl();
+            liff.permanentLink.setExtraQueryParam('param=9');
+            const link2 = liff.permanentLink.createUrl();
             document.getElementById("universalLink2").append(link2);
         }
 
