--- a/path/index.html
+++ b/path/index.html
@@ -25,6 +25,15 @@
     </script>
     <script src="https://static.line-scdn.net/liff/edge/versions/2.23.1/sdk.js"></script>
     <script>
+        async function getUserProfile() {
+                const profile = await liff.getProfile();
+                document.getElementById("pictureUrl").src = profile.pictureUrl;
+                document.getElementById("userId").append(profile.userId);
+                document.getElementById("statusMessage").append(profile.statusMessage);
+                document.getElementById("displayName").append(profile.displayName);
+                document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email);
+        }
+
         async function main(){
             await liff.init({ liffId: "2004273909-l3dZk393" });
             if (liff.isLoggedIn()) {
