--- a/path/index.html
+++ b/path/index.html
@@ -39,7 +39,7 @@
             if (liff.isLoggedIn()) {
                 getUserProfile();
             } else {
-                liff.login();
+                liff.login({redirectUri: "https://kongrith.github.io/StarQuest_LiFF/path"});
             }
         }
     </script>
