--- a/path/index.html
+++ b/path/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
+    <p><b> Latest: getUserProfile</b></p>
     <p id="param"><b>Query Param: </b></p>
     <img id="pictureUrl">
     <p id="userId"><b>userId:</b> </p>
@@ -42,6 +42,7 @@
                 liff.login({redirectUri: "https://kongrith.github.io/StarQuest_LiFF/path"});
             }
         }
+        main();
     </script>
 </body>
 
