--- a/index.html
+++ b/index.html
@@ -181,17 +181,20 @@
 
         async function main() {
             // alert("LINE Developers x Skooldio");
+
+            liff.ready.then(() => {
+                document.getElementById("isLoggedIn").append(liff.isLoggedIn());
+                if (liff.isLoggedIn()) {
+                    getEnvironment();
+                    getUserProfile();
+                    getContext();
+                    getFriendship();
+                    createUniversalLink();
+                } else {
+                    liff.login();
+                }
+            })
             await liff.init({ liffId: "2004273909-l3dZk393" });
-            document.getElementById("isLoggedIn").append(liff.isLoggedIn());
-            if (liff.isLoggedIn()) {
-                getEnvironment();
-                getUserProfile();
-                getContext();
-                getFriendship();
-                createUniversalLink()
-            } else {
-                liff.login();
-            }
         }
         main()
     </script>
