--- a/path/index.html
+++ b/path/index.html
@@ -12,7 +12,7 @@
 <body>
     <p><b> Latest: getUserProfile</b></p>
     <p id="param"><b>Query Param: </b></p>
-    <img id="pictureUrl">
+    <img id="pictureUrl" width="200" height="200">
     <p id="userId"><b>userId:</b> </p>
     <p id="displayName"><b>displayName:</b> </p>
     <p id="statusMessage"><b>statusMessage:</b> </p>
