--- a/path/index.html
+++ b/path/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <p><b> Latest: LiffIsReady</b></p>
+    <p><b> Latest: Vconsole</b></p>
     <p id="param"><b>Query Param: </b></p>
     <img id="pictureUrl" width="200" height="200">
     <p id="userId"><b>userId:</b> </p>
