--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport"
         content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
     <title>TKC StarQuest</title>
-    <link rel="stylesheet" href="css/style.css" media="all">
+    <!-- <link rel="stylesheet" href="css/style.css" media="all"> -->
+    <script>
+        document.write('<link rel="stylesheet href="css/style.css?cache=' + new Daate().getTime() + '">');
+    </script>
 </head>
 
 <body>
-    <p><b> Latest: Vconsole</b></p>
+    <p><b> Latest: avoid Cached</b></p>
     <p id="os"><b>OS:</b> </p>
     <p id="language"><b>Language:</b> </p>
     <p id="version"><b>Version:</b> </p>
