--- a/path/index.html
+++ b/path/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-    <title>Path</title>
+    <title>TKC StarQuest</title>
     <!-- <link rel="stylesheet" href="css/style.css" media="all"> -->
     <script>
-        document.write('<link rel="stylesheet href="css/style.css?cache=' + new Daate().getTime() + '">');
+        document.write('<link rel="stylesheet" href="css/style.css?cache=' + new Date.getTime() + '">');
     </script>
 </head>
 
 <body>
-    <p><b> Latest: avoid Cached</b></p>
+    <p><b> Latest: avoid Cached ..</b></p>
     <p id="param"><b>Query Param: </b></p>
     <img id="pictureUrl" width="200" height="200">
     <p id="userId"><b>userId:</b> </p>
