--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>TKC StarQuest</title>
     <!-- <link rel="stylesheet" href="css/style.css" media="all"> -->
     <script>
-        document.write('<link rel="stylesheet href="css/style.css?cache=' + new Daate().getTime() + '">');
+        document.write('<link rel="stylesheet" href="css/style.css?cache=' + new Date.getTime() + '">');
     </script>
 </head>
 
 <body>
-    <p><b> Latest: avoid Cached</b></p>
+    <p><b> Latest: avoid Cached ..</b></p>
     <p id="os"><b>OS:</b> </p>
     <p id="language"><b>Language:</b> </p>
     <p id="version"><b>Version:</b> </p>
@@ -50,7 +50,8 @@
   </script> -->
 
     <!-- Vconsole   -->
-    <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+    <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script> -->
+    <script src="js/vconsole.min.js"></script>
     <script>
         // VConsole will be exported to `window.VConsole` by default.
         var vConsole = new window.VConsole();
