--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>TKC StarQuest</title>
     <!-- <link rel="stylesheet" href="css/style.css" media="all"> -->
     <script>
-        document.write('<link rel="stylesheet" href="css/style.css?cache=' + new Date.getTime() + '">');
+        document.write('<link rel="stylesheet" href="css/style.css?cache=' + new Date().getTime() + '">');
     </script>
 </head>
 
