--- a/path/index.html
+++ b/path/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <p><b> Latest: avoid Cached ..</b></p>
+    <p><b> Latest: avoid Cached ...</b></p>
     <p id="param"><b>Query Param: </b></p>
     <img id="pictureUrl" width="200" height="200">
     <p id="userId"><b>userId:</b> </p>
